fix: remove abort word
