# docs/swagger.yaml
@@ -10,10 +10,10 @@ definitions:
     - running
     - paused
     - stopped
-    - aborted
+    - deleted
     type: string
     x-enum-comments:
-      MotherServiceStatusAborted: stop and delete containers. can not start again.
+      MotherServiceStatusDeleted: stop and delete containers. can not start again.
       MotherServiceStatusPaused: application level pause on sending request
       MotherServiceStatusPending: mother service just created
       MotherServiceStatusRunning: test is running on application level (sending level)
@@ -29,14 +29,14 @@ definitions:
     - MotherServiceStatusRunning
     - MotherServiceStatusPaused
     - MotherServiceStatusStopped
-    - MotherServiceStatusAborted
+    - MotherServiceStatusDeleted
   entity.ScenarioStatus:
     enum:
     - pending
     - running
     - paused
     - stopped
-    - aborted
+    - deleted
     - succeed
     type: string
     x-enum-varnames:
@@ -44,7 +44,7 @@ definitions:
     - ScenarioStatusRunning
     - ScenarioStatusPaused
     - ScenarioStatusStopped
-    - ScenarioStatusAborted
+    - ScenarioStatusDeleted
     - ScenarioStatusSucceed
   request.GetTablesRequest:
     properties:
@@ -467,11 +467,11 @@ paths:
       summary: Get mother service by ID
       tags:
       - mother-services
-  /api/v1/mother-services/{id}/abort:
+  /api/v1/mother-services/{id}/delete:
     post:
       consumes:
       - application/json
-      description: Abort a specific mother service by its ID.
+      description: Delete a specific mother service by its ID.
       parameters:
       - description: Test scenario ID
         in: path
@@ -497,7 +497,7 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/control-panel-service_internal_server_dto_response.ErrorResponse'
-      summary: Abort a mother service.
+      summary: Delete a mother service.
       tags:
       - mother-services
   /api/v1/mother-services/search:
@@ -651,11 +651,11 @@ paths:
       summary: Get test scenario by ID
       tags:
       - test-scenarios
-  /api/v1/test-scenarios/{id}/abort:
+  /api/v1/test-scenarios/{id}/delete:
     post:
       consumes:
       - application/json
-      description: Abort a specific test scenario by its ID.
+      description: Delete a specific test scenario by its ID.
       parameters:
       - description: Test scenario ID
         in: path
@@ -681,7 +681,7 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/control-panel-service_internal_server_dto_response.ErrorResponse'
-      summary: Abort a test scenario.
+      summary: Delete a test scenario.
       tags:
       - test-scenarios
   /api/v1/test-scenarios/{id}/pause:
