# internal/server/http.go
@@ -179,7 +179,7 @@ func Serve(ctx context.Context, cfg *config.Config) error {
 	apiV1.Post("/mother-services", motherHandler.Create())
 	apiV1.Get("/mother-services/:id", motherHandler.GetByID())
 	apiV1.Post("/mother-services/search", motherHandler.GetPaginated())
-	apiV1.Post("/mother-services/:id/abort", motherHandler.Abort())
+	apiV1.Post("/mother-services/:id/delete", motherHandler.Delete())
 
 	// test category
 	apiV1.Get("/test-categories", testCategoryHandler.GetAll())
@@ -193,7 +193,7 @@ func Serve(ctx context.Context, cfg *config.Config) error {
 	apiV1.Post("/test-scenarios/:id/pause", testScenarioHandler.Pause())
 	apiV1.Post("/test-scenarios/:id/resume", testScenarioHandler.Resume())
 	apiV1.Post("/test-scenarios/:id/stop", testScenarioHandler.Stop())
-	apiV1.Post("/test-scenarios/:id/abort", testScenarioHandler.Abort())
+	apiV1.Post("/test-scenarios/:id/delete", testScenarioHandler.Delete())
 	apiV1.Post("/test-scenarios/update", testScenarioHandler.Update())
 
 	// database-metadata
